--- a/angular.json
+++ b/angular.json
@@ -139,7 +139,9 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "e2e": {
@@ -185,7 +187,8 @@
     }
   },
   "cli": {
-    "defaultCollection": "@ionic/angular-toolkit"
+    "defaultCollection": "@ionic/angular-toolkit",
+    "analytics": "6ea82902-c105-4bd9-bf4c-7e3b5cd957b7"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
